--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED( VERSION 3.1 )
+CMAKE_MINIMUM_REQUIRED( VERSION 3.8 )
 PROJECT( OpenDDL-Parser )
 # read version number from cpp file of the form: static const char *Version = "0.4.0";
 file ( READ code/OpenDDLParser.cpp _ver )
@@ -21,28 +21,12 @@ else()
 endif()
 option( BUILD_SHARED_LIBS		"Set to ON to build static libary of OpenDDL Parser."                         ${build_shared_libs_default} )
 option( COVERALLS               "Generate coveralls data"                                                     OFF )
+option( DDL_DOCUMENTATION       "Set to ON to opt in generating API documentation with Doxygen"               OFF )
 option( DDL_BUILD_TESTS         "Set to OFF to not build tests by default"                                    ON )
 option( DDL_BUILD_PARSER_DEMO   "Set to OFF to opt out building parser demo"                                  ON )
 
-# https://cmake.org/cmake/help/latest/prop_tgt/CXX_STANDARD.html
-string(COMPARE EQUAL "${CMAKE_CXX_STANDARD}" "" no_cmake_cxx_standard_set)
-if(no_cmake_cxx_standard_set)
-    set(CMAKE_CXX_STANDARD 11)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    set(CMAKE_CXX_EXTENSIONS OFF)
-    message(STATUS "Using default C++ standard ${CMAKE_CXX_STANDARD}")
-else()
-    message(STATUS "Using user specified C++ standard ${CMAKE_CXX_STANDARD}")
-endif()
-
-if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
-    find_package(Threads)
-else()
+if(MSVC)
     add_definitions( -D_CRT_SECURE_NO_WARNINGS )
-endif()
-
-if ( NOT BUILD_SHARED_LIBS )
-	add_definitions( -DOPENDDL_STATIC_LIBARY )
 endif()
 
 if (MSVC)
@@ -50,28 +34,16 @@ if (MSVC)
     add_definitions(-DGTEST_HAS_TR1_TUPLE=0)
 endif()
 
-add_definitions( -DOPENDDLPARSER_BUILD )
 add_definitions( -D_VARIADIC_MAX=10 )
 add_definitions( -DGTEST_HAS_PTHREAD=0 )
 if ( DDL_DEBUG_OUTPUT )
     add_definitions( -DDDL_DEBUG_HEADER_NAME)
 endif()
 
-INCLUDE_DIRECTORIES(
-    ./
-    include/
-    contrib/gtest-1.7.0/include
-    contrib/gtest-1.7.0/
-)
-
-link_directories(
-    ${CMAKE_HOME_DIRECTORY}/lib
-)
-
 SET( CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake )
-SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
-SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib )
-SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin )
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib )
+SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib )
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin )
 
 if (MSVC)
   set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc" )  # Force to always compile with W4
@@ -94,13 +66,14 @@ if (COVERALLS)
 endif()
 
 # Include the doc component.
-FIND_PACKAGE( doxygen )
-IF ( DOXYGEN_FOUND )
+if(DDL_DOCUMENTATION)
+    find_package(Doxygen REQUIRED)
     CONFIGURE_FILE( doc/openddlparser_doc.in doc/doxygenfile @ONLY )
-    ADD_CUSTOM_TARGET( doc ALL ${DOXYGEN_EXECUTABLE} doc/doxygenfile
+    add_custom_target(doc ALL
+        ${DOXYGEN_EXECUTABLE} doc/doxygenfile
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT "Generating API documentation with Doxygen" VERBATIM )
-ENDIF ( DOXYGEN_FOUND )
+endif()
 
 SET ( openddlparser_headers
     include/openddlparser/OpenDDLCommon.h
@@ -126,9 +99,23 @@ SOURCE_GROUP( code            FILES ${openddlparser_src} )
 
 ADD_LIBRARY( openddlparser ${openddlparser_src} ${openddlparser_headers})
 
+target_include_directories(openddlparser
+    PUBLIC
+        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
+
+target_compile_features(openddlparser PUBLIC cxx_std_11)
+
+if(MSVC AND NOT BUILD_SHARED_LIBS)
+    target_compile_definitions(openddlparser PUBLIC OPENDDL_STATIC_LIBARY)
+endif()
+
 set_target_properties( openddlparser PROPERTIES PUBLIC_HEADER "${openddlparser_headers}")
 
 if (DDL_BUILD_TESTS)
+    find_package(Threads REQUIRED)
+
     SET ( GTEST_PATH contrib/gtest-1.7.0 )
 
     SET ( gtest_src
@@ -156,7 +143,6 @@ if (DDL_BUILD_TESTS)
         test/OssFuzzTest.cpp
         test/main.cpp
     )
-    add_definitions(-DOPENDDL_TEST_DATA="${CMAKE_CURRENT_LIST_DIR}/test/TestData")
 
     SOURCE_GROUP( code  FILES ${openddlparser_unittest_src} )
     SOURCE_GROUP( gtest FILES ${gtest_src} )
@@ -166,7 +152,14 @@ if (DDL_BUILD_TESTS)
         ${openddlparser_unittest_src}
     )
 
-    target_link_libraries( openddlparser_unittest openddlparser ${CMAKE_THREAD_LIBS_INIT} )
+    target_include_directories(openddlparser_unittest
+        PRIVATE
+            ${GTEST_PATH}
+            ${GTEST_PATH}/include
+    )
+    target_link_libraries(openddlparser_unittest openddlparser Threads::Threads)
+    target_compile_features(openddlparser_unittest PRIVATE cxx_std_11)
+    target_compile_definitions(openddlparser_unittest PRIVATE OPENDDL_TEST_DATA="${PROJECT_SOURCE_DIR}/test/TestData")
 endif ()
 
 if (DDL_BUILD_PARSER_DEMO)
@@ -189,6 +182,7 @@ if (DDL_BUILD_PARSER_DEMO)
     )
 
     target_link_libraries( openddlparser_demo openddlparser )
+    target_compile_features(openddlparser_demo PRIVATE cxx_std_11)
 endif ()
 
 include(GNUInstallDirs)
@@ -196,10 +190,14 @@ include(CMakePackageConfigHelpers)
 
 install(TARGETS openddlparser
         EXPORT  openddlparser-targets
+        RUNTIME       DESTINATION "${CMAKE_INSTALL_BINDIR}"
         LIBRARY       DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         ARCHIVE       DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-        INCLUDES      DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
         PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/openddlparser")
+
+export(EXPORT openddlparser-targets
+       FILE openddlparser-config.cmake
+       NAMESPACE openddlparser::)
 
 install(EXPORT openddlparser-targets
     FILE openddlparser-config.cmake
