group more msvc definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,11 @@ option( DDL_BUILD_TESTS         "Set to OFF to not build tests by default"      
 option( DDL_BUILD_PARSER_DEMO   "Set to OFF to opt out building parser demo"                                  ON )
 
 if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING")
-    add_definitions(-DGTEST_HAS_TR1_TUPLE=0 -D_CRT_SECURE_NO_WARNINGS)
+    add_definitions(
+        -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING
+        -DGTEST_HAS_TR1_TUPLE=0
+        -D_CRT_SECURE_NO_WARNINGS
+    )
 endif()
 
 add_definitions( -D_VARIADIC_MAX=10 )
