fix description of BUILD_SHARED_LIBS option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if ( DDL_STATIC_LIBRARY )
 else()
     set ( build_shared_libs_default ON )
 endif()
-option( BUILD_SHARED_LIBS		"Set to ON to build static libary of OpenDDL Parser."                         ${build_shared_libs_default} )
+option( BUILD_SHARED_LIBS		"Set to ON to build shared libary of OpenDDL Parser."                         ${build_shared_libs_default} )
 option( COVERALLS               "Generate coveralls data"                                                     OFF )
 option( DDL_DOCUMENTATION       "Set to ON to opt in generating API documentation with Doxygen"               OFF )
 option( DDL_BUILD_TESTS         "Set to OFF to not build tests by default"                                    ON )
